WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132966
NetworkProcess crashes at ResourceHandle::continueDidReceiveResponse
https://bugs.webkit.org/show_bug.cgi?id=132966
Summary
NetworkProcess crashes at ResourceHandle::continueDidReceiveResponse
Alexey Proskuryakov
Reported
2014-05-15 13:13:33 PDT
Many tests in fast/files crash when CFNetwork is used with an operation queue delegate. <
rdar://problem/16373694
>
Attachments
proposed fix
(3.91 KB, patch)
2014-05-15 13:25 PDT
,
Alexey Proskuryakov
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2014-05-15 13:25:29 PDT
Created
attachment 231531
[details]
proposed fix All this code should be rewritten from scratch.
Alexey Proskuryakov
Comment 2
2014-05-15 14:00:50 PDT
Committed <
http://trac.webkit.org/r168909
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug