NetworkProcess crashes at ResourceHandle::continueDidReceiveResponse https://bugs.webkit.org/show_bug.cgi?id=132966 <rdar://problem/16373694>

Reviewed by Brady Eidson.

Covered by many fast/files tests.

* platform/network/BlobResourceHandle.cpp: (WebCore::BlobResourceHandle::continueDidReceiveResponse):
* platform/network/BlobResourceHandle.h:
* platform/network/ResourceHandle.h:
Don't call delegate's continueDidReceiveResponse when loading a blob:// URL,
the delegate is null. On the Mac, we used to lazily create it, which was also wrong,
but at least not observable.



Canonical link: https://commits.webkit.org/151016@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168909 268f45cc-cd09-0410-ab3c-d52691b4dbfc